@@ -1,0 +1,40 @@
+# Bind configuration
+# This file is manipulated on PacketFence's startup before being given to named
+options {
+	directory "%%install_dir%%/var/named";
+	pid-file "%%install_dir%%/var/run/named.pid";
+	statistics-file "%%install_dir%%/logs/named_stats.txt";
+    session-keyfile "%%install_dir%%/var/named/session.key";
+};
+
+key pf {
+  algorithm "hmac-md5";
+  secret "KTMl5kgxj9WERwjWbkNBz9xYZcCkoPd13VXsEwKtFcg8mD78AMJknNAdArXG";
+};
+
+controls {
+  inet 127.0.0.1 allow { pf; } keys { pf; };
+};
+
+acl pf {
+  127.0.0.1;
+};
+
+view "registration" {
+  match-clients { %%registration_clients%% };
+  zone "." IN {
+    type master;
+    file "named-registration.ca";
+    allow-update { none; };
+  };
+};
+
+view "isolation" {
+  match-clients { %%isolation_clients%% };
+  zone "." IN {
+    type master;
+    file "named-isolation.ca";
+    allow-update { none; };
+  };
+};
+
