@@ -24,6 +24,7 @@ Enhancements
  * Using HTTP Return Code 501 "Not Implemented" for more effective client blocking
  * Cleanup in the Cisco 3560's code and documentation
  * Startup performance improvements
+ * Added support for session-keyfile introduced in BIND 9.7 (#1257)
 
 Bug Fixes
  * Slashes (/) not allowed in person id (#1322)
